Changes in 2.0.5
* Bugfixes for connection forwarding on BSD.
* DNAT support on linux.
* Configuration Parser/scanner cleanups.
* IPv6 fixes.
* FreeBSD 5 support.
* Compile fixes.
* Made connection forwarding work on recent versions of OpenBSD.

Changes in 2.0.4
* Support for lookups using the netlink socket diagnostics interface on Linux.
* Support for Solaris 9.
* Support for NetBSD.
* Support for Darwin.
* Bugfixes for NAT on *BSD.

Changes in 2.0.3
* Fixed a bug in the configure script that caused a compile error on OpenBSD
  3.0.

Changes in 2.0.2
* Added support for OpenBSD (>= 3.0) Packet Filter.
* Allow multiple strings to be specified after a "reply" statement from which
  one string will be selected at random.
* A --limit command-line argument used to limit the number of connections that
  can be open at any one time.
* Fixed a bug that caused oidentd to chew up lots of CPU time on some
  operating systems.
* Note that oidentd only suports ipf NAT in FreeBSD (i.e. ipfw is not
  supported).
    - See the TODO file for slightly more info.

Changes in 2.0.1
* NAT support on OpenBSD 2.9 and greater has been enabled again.
* Allow comments and whitespace in /etc/oidentd_masq.conf.
* Fix a crash that occurred when oidentd reloaded its configuration file.

Changes in 2.0.0
* A new command-line flag, --config, can be used to specify the config file.
* Support for OpenBSD 2.9
* IP masquerading/NAT support for FreeBSD.
* The bug that caused IP masquerading to fail was fixed.
* More bug fixes.

Changes in 1.9.9.1
* Lots of bugfixes.
* Support for Solaris 5.4 - 5.8

Changes in 1.9.9
* Complete rewrite.
* Addition of system-wide and per-user configuration files.
* IPv6 support.

Changes in 1.7.1
* Fixed a bug that prevented oidentd from running in standalone mode.

Changes in 1.7.0
* IP masquerading support for OpenBSD.
* Support for FreeBSD 4.*
* Support for libudb.

Changes in 1.6.4
* Add -F and -O flags.  See the manual page for a description.