@@ -5,7 +5,8 @@ Changes in 2.0.5
 * IPv6 fixes.
 * FreeBSD 5 support.
 * Compile fixes.
-* Made connection forwarding work on recent versions of OpenBSD.
+* Made connection forwarding work on recent versions of OpenBSD and on FreeBSD
+  when NAT is disabled.
 
 Changes in 2.0.4
 * Support for lookups using the netlink socket diagnostics interface on Linux.
